--- a/weibo/RetweetStatusListCellView.xib
+++ b/weibo/RetweetStatusListCellView.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1080</int>
-		<string key="IBDocument.SystemVersion">12C54</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.SystemVersion">12C60</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2843</string>
 		<string key="IBDocument.AppKitVersion">1187.34</string>
 		<string key="IBDocument.HIToolboxVersion">625.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">2840</string>
+			<string key="NS.object.0">2843</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSButton</string>
@@ -42,24 +42,49 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">301</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="NSButton" id="622397379">
+					<object class="NSButton" id="147536663">
 						<reference key="NSNextResponder" ref="999491567"/>
 						<int key="NSvFlags">-2147483380</int>
-						<string key="NSFrame">{{366, 80}, {20, 15}}</string>
+						<string key="NSFrame">{{350, 80}, {36, 15}}</string>
 						<reference key="NSSuperview" ref="999491567"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="786070722"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSButtonCell" key="NSCell" id="547282830">
+							<int key="NSCellFlags">67108864</int>
+							<int key="NSCellFlags2">134217728</int>
+							<string key="NSContents">RT</string>
+							<object class="NSFont" key="NSSupport" id="27">
+								<string key="NSName">LucidaGrande-Bold</string>
+								<double key="NSSize">11</double>
+								<int key="NSfFlags">3357</int>
+							</object>
+							<string key="NSCellIdentifier">_NS:9</string>
+							<reference key="NSControlView" ref="147536663"/>
+							<int key="NSButtonFlags">-2038284288</int>
+							<int key="NSButtonFlags2">39</int>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
+						</object>
+						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+					</object>
+					<object class="NSButton" id="622397379">
+						<reference key="NSNextResponder" ref="999491567"/>
+						<int key="NSvFlags">-2147483380</int>
+						<string key="NSFrame">{{303, 80}, {30, 15}}</string>
+						<reference key="NSSuperview" ref="999491567"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="147536663"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="690989165">
 							<int key="NSCellFlags">67108864</int>
 							<int key="NSCellFlags2">134217728</int>
 							<string key="NSContents">R</string>
-							<object class="NSFont" key="NSSupport">
-								<string key="NSName">LucidaGrande-Bold</string>
-								<double key="NSSize">11</double>
-								<int key="NSfFlags">3357</int>
-							</object>
+							<reference key="NSSupport" ref="27"/>
 							<string key="NSCellIdentifier">_NS:9</string>
 							<reference key="NSControlView" ref="622397379"/>
 							<int key="NSButtonFlags">-2038284288</int>
@@ -344,6 +369,30 @@
 					</object>
 					<int key="connectionID">81</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">showReplyDialog:</string>
+						<reference key="source" ref="999491567"/>
+						<reference key="destination" ref="622397379"/>
+					</object>
+					<int key="connectionID">82</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">repostWithComment:</string>
+						<reference key="source" ref="999491567"/>
+						<reference key="destination" ref="147536663"/>
+					</object>
+					<int key="connectionID">86</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">repostButton</string>
+						<reference key="source" ref="999491567"/>
+						<reference key="destination" ref="147536663"/>
+					</object>
+					<int key="connectionID">87</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -380,6 +429,7 @@
 							<reference ref="680712392"/>
 							<reference ref="915690266"/>
 							<reference ref="786070722"/>
+							<reference ref="147536663"/>
 							<reference ref="622397379"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -446,6 +496,19 @@
 						<reference key="object" ref="690989165"/>
 						<reference key="parent" ref="622397379"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">83</int>
+						<reference key="object" ref="147536663"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="547282830"/>
+						</array>
+						<reference key="parent" ref="999491567"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">84</int>
+						<reference key="object" ref="547282830"/>
+						<reference key="parent" ref="147536663"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -465,15 +528,53 @@
 				<string key="77.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="79.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="80.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="83.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="84.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">81</int>
+			<int key="maxID">87</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">BasicListViewCell</string>
+					<string key="superclassName">PXListViewCell</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="repostWithComment:">id</string>
+						<string key="showReplyDialog:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="repostWithComment:">
+							<string key="name">repostWithComment:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="showReplyDialog:">
+							<string key="name">showReplyDialog:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="replyButton">NSButton</string>
+						<string key="repostButton">NSButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="replyButton">
+							<string key="name">replyButton</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="repostButton">
+							<string key="name">repostButton</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BasicListViewCell.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">PXListViewCell</string>
 					<string key="superclassName">NSView</string>
@@ -484,10 +585,9 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">RetweetStatusListCellView</string>
-					<string key="superclassName">PXListViewCell</string>
+					<string key="superclassName">BasicListViewCell</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="relativeTime">NSTextField</string>
-						<string key="replyButton">NSButton</string>
 						<string key="retweetTextView">RoundedNSTextView</string>
 						<string key="statusTextView">NSTextView</string>
 						<string key="userName">NSTextField</string>
@@ -497,10 +597,6 @@
 						<object class="IBToOneOutletInfo" key="relativeTime">
 							<string key="name">relativeTime</string>
 							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="replyButton">
-							<string key="name">replyButton</string>
-							<string key="candidateClassName">NSButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="retweetTextView">
 							<string key="name">retweetTextView</string>
